--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Usando a versão mais recente da action de checkout
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4 # Usando a versão mais recente da action de Node.js
         with:
           node-version: '18'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci # Instala as dependências usando o modo CI (mais rápido e determinístico)
 
       - name: Build
-        run: npm run build
+        run: npm run build # Executa o script de build definido no package.json
+        env:
+          CI: false # Permite que o build continue mesmo com warnings do ESLint
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: build # The folder the action should deploy
-          branch: gh-pages # The branch the action should deploy to (separating content from source code) 
+          folder: build # A pasta que será implantada no GitHub Pages
+          branch: gh-pages # A branch para onde os arquivos de build serão enviados
+          clean: true # Remove arquivos antigos da branch gh-pages antes do deploy 
