--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "./logo192.png",
-      "type": "image/png",
+      "src": "./logo_icon.svg",
+      "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
-      "src": "./logo512.png",
-      "type": "image/png",
+      "src": "./logo_icon.svg",
+      "type": "image/svg+xml",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#2c3e50",
-  "background_color": "#f5f7fa"
+  "theme_color": "#2767e2",
+  "background_color": "#0c1c32"
 } 
